--- a/resources/sass/frontend/project/hamburgers/_base.scss
+++ b/resources/sass/frontend/project/hamburgers/_base.scss
@@ -1,6 +1,6 @@
 // Hamburger
 // ==================================================
-/* uncss:ignore start */
+/*! uncss:ignore start */
 .hamburger {
   padding: $hamburger-padding-y $hamburger-padding-x;
   display: inline-block;
@@ -85,4 +85,4 @@
     bottom: ($hamburger-layer-spacing + $hamburger-layer-height) * -1;
   }
 }
-/* uncss:ignore end */
+/*! uncss:ignore end */
