--- a/resources/sass/frontend/project/hamburgers/hamburgers.scss
+++ b/resources/sass/frontend/project/hamburgers/hamburgers.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*!
+/*
  * Hamburgers
  * @description Tasty CSS-animated hamburgers
  * @author Jonathan Suh @jonsuh
@@ -30,37 +30,37 @@ $hamburger-active-hover-filter: $hamburger-hover-filter !default;
 // Types (Remove or comment out what you don’t need)
 // ==================================================
 $hamburger-types: (
-  3dx,
-  3dx-r,
-  3dy,
-  3dy-r,
-  3dxy,
-  3dxy-r,
-  arrow,
-  arrow-r,
-  arrowalt,
-  arrowalt-r,
-  arrowturn,
-  arrowturn-r,
-  boring,
-  collapse,
-  collapse-r,
-  elastic,
-  elastic-r,
-  emphatic,
-  emphatic-r,
-  minus,
-  slider,
-  slider-r,
-  spin,
-  spin-r,
+  //3dx,
+  //3dx-r,
+  //3dy,
+  //3dy-r,
+  //3dxy,
+  //3dxy-r,
+  //arrow,
+  //arrow-r,
+  //arrowalt,
+  //arrowalt-r,
+  //arrowturn,
+  //arrowturn-r,
+  //boring,
+  //collapse,
+  //collapse-r,
+  //elastic,
+  //elastic-r,
+  //emphatic,
+  //emphatic-r,
+  //minus,
+  //slider,
+  //slider-r,
+  //spin,
+  //spin-r,
   spring,
-  spring-r,
-  stand,
-  stand-r,
-  squeeze,
-  vortex,
-  vortex-r
+  //spring-r,
+  //stand,
+  //stand-r,
+  //squeeze,
+  //vortex,
+  //vortex-r
 ) !default;
 
 // Base Hamburger (We need this)
