--- a/public/fonts/icons/style.css
+++ b/public/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?vsz7b6');
-  src:  url('fonts/icomoon.eot?vsz7b6#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?vsz7b6') format('truetype'),
-    url('fonts/icomoon.woff?vsz7b6') format('woff'),
-    url('fonts/icomoon.svg?vsz7b6#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?bv128');
+  src:  url('fonts/icomoon.eot?bv128#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?bv128') format('truetype'),
+    url('fonts/icomoon.woff?bv128') format('woff'),
+    url('fonts/icomoon.svg?bv128#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-home:before {
+  content: "\e910";
+}
 .icon-arrow:before {
   content: "\e900";
 }
