--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89333,6 +89333,13 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.breadcrumbs-arrow {
+  transform: rotate(-90deg);
+  font-size: 0.7em; }
+
+/* */
+/* CONTAINERS */
+/* */
 .button-golden-solid {
   color: #fff;
   background-color: #ECBA78; }
@@ -89376,6 +89383,17 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.lazyload, .lazyloading {
+  opacity: 0;
+  transition: opacity 300ms; }
+
+.lazyloaded {
+  opacity: 1;
+  transition: opacity 300ms; }
+
+/* */
+/* CONTAINERS */
+/* */
 .input {
   background-color: transparent;
   padding: .5em .35em;
@@ -89384,17 +89402,6 @@ p {
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   width: 100%;
   max-width: 15em; }
-
-/* */
-/* CONTAINERS */
-/* */
-.lazyload, .lazyloading {
-  opacity: 0;
-  transition: opacity 300ms; }
-
-.lazyloaded {
-  opacity: 1;
-  transition: opacity 300ms; }
 
 /* */
 /* CONTAINERS */
@@ -89669,6 +89676,14 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.form_order-design {
+  background-position: center center;
+  background-size: cover;
+  background-image: url("../img/backgrounds/form_order-design.jpg"); }
+
+/* */
+/* CONTAINERS */
+/* */
 .bg-title-screen--home {
   background-size: cover;
   background-position: center center; }
@@ -89684,14 +89699,6 @@ p {
   @media (min-width: 1200px) {
     .bg-title-screen--home {
       background-image: url("../img/backgrounds/title-screen/home.jpg"); } }
-
-/* */
-/* CONTAINERS */
-/* */
-.form_order-design {
-  background-position: center center;
-  background-size: cover;
-  background-image: url("../img/backgrounds/form_order-design.jpg"); }
 
 /* */
 /* CONTAINERS */
