--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89675,14 +89675,6 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.form_order-design {
-  background-position: center center;
-  background-size: cover;
-  background-image: url("../img/backgrounds/form_order-design.jpg"); }
-
-/* */
-/* CONTAINERS */
-/* */
 /* */
 /* CONTAINERS */
 /* */
@@ -89723,6 +89715,14 @@ p {
   @media (min-width: 1200px) {
     .bg-title-screen--portfolio {
       background-image: url("../img/backgrounds/portfolio/title-screen_xl@1.jpg"); } }
+
+/* */
+/* CONTAINERS */
+/* */
+.form_order-design {
+  background-position: center center;
+  background-size: cover;
+  background-image: url("../img/backgrounds/form_order-design.jpg"); }
 
 /* */
 /* CONTAINERS */
@@ -90127,6 +90127,42 @@ p {
   font-weight: 900;
   font-display: swap;
   src: url("../fonts/Lato/Lato-Black.woff") format("woff"), url("../fonts/Lato/Lato-Black.woff2") format("woff2"); }
+
+/* */
+/* CONTAINERS */
+/* */
+.b-radius-1px {
+  border-radius: 1px; }
+
+.b-radius-2px {
+  border-radius: 2px; }
+
+.b-radius-3px {
+  border-radius: 3px; }
+
+.b-radius-4px {
+  border-radius: 4px; }
+
+.b-radius-5px {
+  border-radius: 5px; }
+
+.b-radius-6px {
+  border-radius: 6px; }
+
+.b-radius-7px {
+  border-radius: 7px; }
+
+.b-radius-8px {
+  border-radius: 8px; }
+
+.b-radius-9px {
+  border-radius: 9px; }
+
+.b-radius-10px {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
