--- a/resources/sass/frontend/framework/borders/border-radius.scss
+++ b/resources/sass/frontend/framework/borders/border-radius.scss
@@ -1,8 +1,8 @@
 @import "../../../bootstrap";
 
-@for $i from 1px through 10px {
+@for $i from 1 through 10 {
     .b-radius-#{$i} {
-        border-radius: $i;
+        border-radius: #{$i}px;
     }
 }
 
