--- a/resources/sass/frontend/project/header-nav-dropdown/header-nav-dropdown-menu.sass
+++ b/resources/sass/frontend/project/header-nav-dropdown/header-nav-dropdown-menu.sass
@@ -1,9 +1,8 @@
 @import "../../../bootstrap"
 
-.header-nav-dropdown
+.header-nav-dropdown-menu
     $pointer_size: 16px
     top: calc(100% + #{$pointer_size})
-    cursor: pointer
 
 
     &:after
