--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -26,7 +26,7 @@ footer, header, hgroup, menu, section {
 body {
   line-height: 1; }
 
-ol, ul {
+ul {
   list-style: none; }
 
 blockquote, q {
@@ -89881,6 +89881,21 @@ p {
 @media (min-width: 1200px) {
   .portfolio-item-card {
     width: calc((100% - 24px) / 4) !important; } }
+
+/* */
+/* CONTAINERS */
+/* */
+@media (max-width: 374px) {
+  .pricing-card {
+    width: 80vw !important; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .pricing-card {
+    width: 70vw !important; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .pricing-card {
+    width: 50vw !important; } }
 
 /* */
 /* CONTAINERS */
