Доработка pricing-cards

--- a/resources/sass/frontend/_colors.scss
+++ b/resources/sass/frontend/_colors.scss
@@ -12,6 +12,7 @@ $colors-map:
     (black-100, $black-100),
     (black-90, $black-90),
 
+    (grey-90, $grey-90),
     (grey-80, $grey-80),
     (grey-30, $grey-30),
     (grey-20, $grey-20),
