Проработка special-offer-cards

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -61102,6 +61102,140 @@ p {
   .md-lg\:mr-auto {
     margin-right: auto; } }
 
+.mt-auto {
+  margin-top: auto; }
+
+@media (max-width: 374px) {
+  .xs\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 1200px) {
+  .xl\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 1366px) {
+  .xl2\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 1440px) {
+  .xl3\:mt-auto {
+    margin-top: auto; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:mt-auto {
+    margin-top: auto; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:mt-auto {
+    margin-top: auto; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 768px) {
+  .md-xl\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:mt-auto {
+    margin-top: auto; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:mt-auto {
+    margin-top: auto; } }
+
+.mb-auto {
+  margin-bottom: auto; }
+
+@media (max-width: 374px) {
+  .xs\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 1200px) {
+  .xl\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 1366px) {
+  .xl2\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 1440px) {
+  .xl3\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 768px) {
+  .md-xl\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:mb-auto {
+    margin-bottom: auto; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:mb-auto {
+    margin-bottom: auto; } }
+
 /* */
 /* CONTAINERS */
 /* */
@@ -89357,12 +89491,6 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.breadcrumbs-arrow {
-  font-size: 0.7em; }
-
-/* */
-/* CONTAINERS */
-/* */
 .button-golden-solid {
   color: #fff;
   background-color: #ECBA78; }
@@ -89376,6 +89504,12 @@ p {
   border: 1px solid #fff; }
   .button-white-ghost:hover {
     color: #151A1C;
+    background-color: #fff; }
+
+.button-white-ghost--inverse {
+  border: 1px solid rgba(186, 190, 192, 0.6); }
+  .button-white-ghost--inverse:hover {
+    color: #babec0;
     background-color: #fff; }
 
 /* */
@@ -89402,6 +89536,12 @@ p {
   font-weight: bold;
   transition: all 0.2s;
   white-space: nowrap; }
+
+/* */
+/* CONTAINERS */
+/* */
+.breadcrumbs-arrow {
+  font-size: 0.7em; }
 
 /* */
 /* CONTAINERS */
@@ -90012,6 +90152,21 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+@media (max-width: 374px) {
+  .special-offer-card {
+    width: 80vw !important; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .special-offer-card {
+    width: 70vw !important; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .special-offer-card {
+    width: 50vw !important; } }
+
+/* */
+/* CONTAINERS */
+/* */
 .team-person-card {
   height: auto !important; }
   @media (max-width: 1019px) {
@@ -90289,42 +90444,6 @@ p {
   font-weight: 900;
   font-display: swap;
   src: url("../fonts/Lato/Lato-Black.woff") format("woff"), url("../fonts/Lato/Lato-Black.woff2") format("woff2"); }
-
-/* */
-/* CONTAINERS */
-/* */
-.b-radius-1 {
-  border-radius: 1px; }
-
-.b-radius-2 {
-  border-radius: 2px; }
-
-.b-radius-3 {
-  border-radius: 3px; }
-
-.b-radius-4 {
-  border-radius: 4px; }
-
-.b-radius-5 {
-  border-radius: 5px; }
-
-.b-radius-6 {
-  border-radius: 6px; }
-
-.b-radius-7 {
-  border-radius: 7px; }
-
-.b-radius-8 {
-  border-radius: 8px; }
-
-.b-radius-9 {
-  border-radius: 9px; }
-
-.b-radius-10 {
-  border-radius: 10px; }
-
-.b-radius-round {
-  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
@@ -90797,6 +90916,42 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:shadow-2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); } }
+
+/* */
+/* CONTAINERS */
+/* */
+.b-radius-1 {
+  border-radius: 1px; }
+
+.b-radius-2 {
+  border-radius: 2px; }
+
+.b-radius-3 {
+  border-radius: 3px; }
+
+.b-radius-4 {
+  border-radius: 4px; }
+
+.b-radius-5 {
+  border-radius: 5px; }
+
+.b-radius-6 {
+  border-radius: 6px; }
+
+.b-radius-7 {
+  border-radius: 7px; }
+
+.b-radius-8 {
+  border-radius: 8px; }
+
+.b-radius-9 {
+  border-radius: 9px; }
+
+.b-radius-10 {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
@@ -91604,6 +91759,21 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:overflow-y-scroll {
     overflow-y: scroll; } }
+
+/* */
+/* CONTAINERS */
+/* */
+.list-none {
+  list-style: none; }
+
+.list-circle {
+  list-style: circle; }
+
+.list-disc {
+  list-style: disc; }
+
+.list-square {
+  list-style: square; }
 
 /* */
 /* CONTAINERS */
@@ -92578,6 +92748,9 @@ p {
 
 .bg-golden-60 {
   background-color: #F4D5AC; }
+
+.bg-white {
+  background-color: #fff; }
 
 .bg-gradient-dark {
   background: #414345;
