--- a/resources/sass/frontend/_colors.scss
+++ b/resources/sass/frontend/_colors.scss
@@ -19,5 +19,7 @@ $colors-map:
 
     (golden-100, $golden-100),
     (golden-90, $golden-90),
-    (golden-60, $golden-60)
+    (golden-60, $golden-60),
+
+    (white, #fff)
 
