--- a/resources/sass/frontend/framework/spacing/margin.sass
+++ b/resources/sass/frontend/framework/spacing/margin.sass
@@ -43,3 +43,9 @@
 
 +breakpoints(mr-auto)
     margin-right: auto
+
++breakpoints(mt-auto)
+    margin-top: auto
+
++breakpoints(mb-auto)
+    margin-bottom: auto
