--- a/resources/sass/frontend/project/button/button-white-ghost.sass
+++ b/resources/sass/frontend/project/button/button-white-ghost.sass
@@ -6,3 +6,11 @@
     &:hover
         color: $black-90
         background-color: #fff
+
+
+.button-white-ghost--inverse
+    border: 1px solid rgba($grey-30,.6)
+
+    &:hover
+        color: $grey-30
+        background-color: #fff
