Завершена работа над страницами /services

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -89491,6 +89491,12 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.breadcrumbs-arrow {
+  font-size: 0.7em; }
+
+/* */
+/* CONTAINERS */
+/* */
 .button-golden-solid {
   color: #fff;
   background-color: #ECBA78; }
@@ -89540,24 +89546,19 @@ p {
 /* */
 /* CONTAINERS */
 /* */
-.breadcrumbs-arrow {
-  font-size: 0.7em; }
-
-/* */
-/* CONTAINERS */
-/* */
-.header-nav-dropdown-menu {
-  top: calc(100% + 16px); }
-  .header-nav-dropdown-menu:after {
-    content: '';
-    display: block;
-    width: 16px;
-    height: 16px;
-    background: inherit;
-    transform: rotate(45deg);
-    position: absolute;
-    top: -8px;
-    left: 16px; }
+@media (min-width: 1200px) {
+  .header-nav-dropdown-menu {
+    top: calc(100% + 16px); }
+    .header-nav-dropdown-menu:after {
+      content: '';
+      display: block;
+      width: 16px;
+      height: 16px;
+      background: inherit;
+      transform: rotate(45deg);
+      position: absolute;
+      top: -8px;
+      left: 16px; } }
 
 /* */
 /* CONTAINERS */
@@ -90448,6 +90449,42 @@ p {
 /* */
 /* CONTAINERS */
 /* */
+.b-radius-1 {
+  border-radius: 1px; }
+
+.b-radius-2 {
+  border-radius: 2px; }
+
+.b-radius-3 {
+  border-radius: 3px; }
+
+.b-radius-4 {
+  border-radius: 4px; }
+
+.b-radius-5 {
+  border-radius: 5px; }
+
+.b-radius-6 {
+  border-radius: 6px; }
+
+.b-radius-7 {
+  border-radius: 7px; }
+
+.b-radius-8 {
+  border-radius: 8px; }
+
+.b-radius-9 {
+  border-radius: 9px; }
+
+.b-radius-10 {
+  border-radius: 10px; }
+
+.b-radius-round {
+  border-radius: 50%; }
+
+/* */
+/* CONTAINERS */
+/* */
 .shadow-xs {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05); }
 
@@ -90916,42 +90953,6 @@ p {
 @media (min-width: 768px) and (max-width: 1199px) {
   .md-lg\:shadow-2xl {
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25); } }
-
-/* */
-/* CONTAINERS */
-/* */
-.b-radius-1 {
-  border-radius: 1px; }
-
-.b-radius-2 {
-  border-radius: 2px; }
-
-.b-radius-3 {
-  border-radius: 3px; }
-
-.b-radius-4 {
-  border-radius: 4px; }
-
-.b-radius-5 {
-  border-radius: 5px; }
-
-.b-radius-6 {
-  border-radius: 6px; }
-
-.b-radius-7 {
-  border-radius: 7px; }
-
-.b-radius-8 {
-  border-radius: 8px; }
-
-.b-radius-9 {
-  border-radius: 9px; }
-
-.b-radius-10 {
-  border-radius: 10px; }
-
-.b-radius-round {
-  border-radius: 50%; }
 
 /* */
 /* CONTAINERS */
@@ -92725,32 +92726,672 @@ p {
 .bg-black-100 {
   background-color: #000; }
 
+@media (max-width: 374px) {
+  .xs\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-black-100 {
+    background-color: #000; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-black-100 {
+    background-color: #000; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-black-100 {
+    background-color: #000; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-black-100 {
+    background-color: #000; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-black-100 {
+    background-color: #000; } }
+
 .bg-black-90 {
   background-color: #151A1C; }
+
+@media (max-width: 374px) {
+  .xs\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-black-90 {
+    background-color: #151A1C; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-black-90 {
+    background-color: #151A1C; } }
 
 .bg-grey-90 {
   background-color: #3E4345; }
 
+@media (max-width: 374px) {
+  .xs\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-grey-90 {
+    background-color: #3E4345; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-grey-90 {
+    background-color: #3E4345; } }
+
 .bg-grey-80 {
   background-color: #5E6366; }
+
+@media (max-width: 374px) {
+  .xs\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-grey-80 {
+    background-color: #5E6366; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-grey-80 {
+    background-color: #5E6366; } }
 
 .bg-grey-30 {
   background-color: #babec0; }
 
+@media (max-width: 374px) {
+  .xs\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-grey-30 {
+    background-color: #babec0; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-grey-30 {
+    background-color: #babec0; } }
+
 .bg-grey-20 {
   background-color: #F1F3F4; }
+
+@media (max-width: 374px) {
+  .xs\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-grey-20 {
+    background-color: #F1F3F4; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-grey-20 {
+    background-color: #F1F3F4; } }
 
 .bg-golden-100 {
   background-color: #EFB458; }
 
+@media (max-width: 374px) {
+  .xs\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-golden-100 {
+    background-color: #EFB458; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-golden-100 {
+    background-color: #EFB458; } }
+
 .bg-golden-90 {
   background-color: #ECBA78; }
+
+@media (max-width: 374px) {
+  .xs\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-golden-90 {
+    background-color: #ECBA78; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-golden-90 {
+    background-color: #ECBA78; } }
 
 .bg-golden-60 {
   background-color: #F4D5AC; }
 
+@media (max-width: 374px) {
+  .xs\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-golden-60 {
+    background-color: #F4D5AC; } }
+
 .bg-white {
   background-color: #fff; }
+
+@media (max-width: 374px) {
+  .xs\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 1200px) {
+  .xl\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 1366px) {
+  .xl2\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 1440px) {
+  .xl3\:bg-white {
+    background-color: #fff; } }
+
+@media (max-width: 767px) {
+  .xs-sm\:bg-white {
+    background-color: #fff; } }
+
+@media (max-width: 1019px) {
+  .xs-md\:bg-white {
+    background-color: #fff; } }
+
+@media (max-width: 1199px) {
+  .xs-lg\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 375px) {
+  .sm-xl\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 768px) {
+  .md-xl\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 1020px) {
+  .lg-xl\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .sm\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 768px) and (max-width: 1019px) {
+  .md\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 1020px) and (max-width: 1199px) {
+  .lg\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 375px) and (max-width: 1019px) {
+  .sm-md\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 375px) and (max-width: 1199px) {
+  .sm-lg\:bg-white {
+    background-color: #fff; } }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .md-lg\:bg-white {
+    background-color: #fff; } }
 
 .bg-gradient-dark {
   background: #414345;
