--- a/resources/sass/frontend/project/header-nav-dropdown/header-nav-dropdown-menu.sass
+++ b/resources/sass/frontend/project/header-nav-dropdown/header-nav-dropdown-menu.sass
@@ -1,17 +1,18 @@
 @import "../../../bootstrap"
 
 .header-nav-dropdown-menu
-    $pointer_size: 16px
-    top: calc(100% + #{$pointer_size})
 
+    @media ($breakpoint_xl)
+        $pointer_size: 16px
+        top: calc(100% + #{$pointer_size})
 
-    &:after
-        content: ''
-        display: block
-        width: $pointer_size
-        height: $pointer_size
-        background: inherit
-        transform: rotate(45deg)
-        position: absolute
-        top: -#{$pointer_size / 2}
-        left: $pointer_size
+        &:after
+            content: ''
+            display: block
+            width: $pointer_size
+            height: $pointer_size
+            background: inherit
+            transform: rotate(45deg)
+            position: absolute
+            top: -#{$pointer_size / 2}
+            left: $pointer_size
