Улучшена адаптивность картинок в портфолио, исходя из размеров исходников

--- a/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card--slide.sass
+++ b/resources/sass/frontend/project/cards/portfolio-item-card/portfolio-item-card--slide.sass
@@ -4,6 +4,5 @@
 .portfolio-item-card--slide
     @extend .portfolio-item-card
 
-    @media ($breakpoint_lg) and ($breakpoint_lg_max)
-        width: 768px !important
-        height: calc(768px / #{$ratio}) !important
+    @media ($breakpoint_md) and ($breakpoint_lg_max)
+        width: 664px !important
